--- a/2021/.gitignore
+++ b/2021/.gitignore
@@ -1,3 +1,8 @@
+# Ignore binary executables
+*
+!*.*
+!*/
+
 .vscode/
 .ionide/
 todo/
@@ -5,3 +10,5 @@ test.in
 .fake
 .pls_cache/
 .metals/
+*.hi
+*.o
