--- a/2021/.gitignore
+++ b/2021/.gitignore
@@ -4,16 +4,18 @@
 !*/
 !Makefile
 
+# Directories
 .vscode/
 .ionide/
 todo/
-test.in
-.fake
+out/
+build/
 .pls_cache/
 .metals/
-*.hi
-*.o
-*.out
-build/
+
+# Files
+test.in
+.*
 *.class
-.gdb_history
+*.out
+*.iml
