--- a/2021/Makefile
+++ b/2021/Makefile
@@ -1,4 +1,4 @@
-all: 1 2 3 4 6 7 10
+all: 1 2 3 4 6 7 10 13
 
 1: Day01.s
 	@gcc -m64 -g -no-pie $^ -o Day01
@@ -21,6 +21,9 @@ all: 1 2 3 4 6 7 10
 10: Day10.swift
 	@swiftc $^
 
+13: Day13.rs
+	@rustc Day13.rs
+
 clean:
 	$(RM) *.o *.hi *.class a.out *.jar
-	$(RM) Day01 Day02 Day03 Day06 Day10
+	$(RM) Day01 Day02 Day03 Day06 Day10 Day13
