--- a/2024/.vscode/settings.json
+++ b/2024/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "editor.formatOnSave": false
+    "editor.formatOnSave": false,
+    "python.terminal.activateEnvironment": true,
+    "python.REPL.enableREPLSmartSend": false
 }
