--- a/2017/.vscode/settings.json
+++ b/2017/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
-    "python.terminal.activateEnvironment": true,
-    "python.defaultInterpreterPath": "./env/bin/python"
+  "python.terminal.activateEnvironment": true,
+  "python.defaultInterpreterPath": "./env/bin/python",
+  "python.REPL.enableREPLSmartSend": false
 }
